--- a/em-see/src/Body Contents/ReservationCalendar.css
+++ b/em-see/src/Body Contents/ReservationCalendar.css
@@ -49,7 +49,8 @@
   }
   
    .reservation-calendar th {
-    background-color: #f2f2f2;
+    background-color: #00cc00;
+    color: #fff;
   }
   
    .reservation-calendar table td {
